fixed navbar collapse issue

--- a/sass/art.scss
+++ b/sass/art.scss
@@ -36,6 +36,14 @@
     }
   }
 
+  .navbar-toggler {
+    border: 0;
+  }
+
+  .navbar-toggler-right {
+    right: 0;
+  }
+
   .welcome-text {
     text-align: left;
     max-width: 80%;
