--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -35,6 +35,14 @@
     }
   }
 
+  .navbar-toggler {
+    border: 0;
+  }
+
+  .navbar-toggler-right {
+    right: 0;
+  }
+
   .icons {
     .fa {
       padding: 30px;
